[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ljobx"
version = "0.1.9"
authors = [
    { name="Tushar Kumar", email="tusharkr1918@gmail.com" },
]
description = "A powerful, asynchronous scraper for LinkedIn job postings without authentication."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=2.2.0",
    "platformdirs>=4.4.0",
    "socksio>=1.0.0",
    "PyYAML~=6.0.2",
    "pandas~=2.3.2"
]

[project.urls]
Homepage = "https://github.com/tusharkr1918/ljobx"

[project.scripts]
ljobx = "ljobx.core.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
