[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ljobx"
version = "1.3.5"
authors = [
    { name = "Tushar Kumar", email = "tusharkr1918@gmail.com" },
]
description = "A powerful, asynchronous scraper for LinkedIn job postings without authentication."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "httpx[socks]>=0.27.0    ",
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "PyYAML~=6.0.2",
]

[project.urls]
Homepage = "https://github.com/tusharkr1918/ljobx"

[project.scripts]
ljobx = "ljobx.core.cli:main"
ljobx-ui = "ljobx.ui.main:launch"

[project.optional-dependencies]
ui = [
    "streamlit~=1.50.0",
    "streamlit-local-storage~=0.0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
